--- a/style.css
+++ b/style.css
@@ -1,3 +1,9 @@
-body{
+body {
+    margin: 0;
+    height: 100vh;
     background-color: orange;
+    background-image: url(wp11979619-blue-lock-computer-wallpapers.jpg);
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: center;
 }
