--- a/style.css
+++ b/style.css
@@ -2,8 +2,9 @@ body {
     margin: 0;
     height: 100vh;
     background-color: orange;
-    background-image: url(wp11979619-blue-lock-computer-wallpapers.jpg);
+    background-image: url(HI.jpg);
     background-repeat: no-repeat;
     background-size: cover;
     background-position: center;
 }
+
